# bedrockflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  buildscr.sh  dockerfile  eslint.config.cjs  package-lock.json  package.json  pyproject.toml
.github/: bandit.yaml
.github/workflows/: ci.yml  docker.yml  security.yml
docs/: COOKBOOK.md  LAUNCH.md
examples/: AWS.md  RESEARCH.md  _runner.py  parallel_tasks.py  run_parallel_json.py  run_parallel_python.py  run_parallel_yaml.py  run_python.py
examples/aws/: README.md  __init__.py  _runner.py  run_eval_fail.py  run_failure.py  run_json.py  run_mock.py  run_python.py  run_yaml.py  tasks.py
examples/research/: _runner.py  run_json.py  run_mock.py  run_python.py  run_yaml.py  tasks.py
examples/workflows/: daily_report.json  daily_report.yaml  parallel_portfolio.json  parallel_portfolio.yaml
scripts/: dev_run_trade_memo.sh
src/: executor.py  registry.py
src/bedrockflow/: __init__.py  __main__.py  cli.py  envconfig.py
src/models/: eval.py  model_turn.py  roles.py
tests/: conftest.py  test_aws_examples.py  test_bandit_cli.py  test_checks.py  test_cli.py  test_compare.py  test_converse_with_evals.py  test_discovery.py  test_example_evals.py  test_executor.py  test_offline.py  test_packaging.py  test_panels.py  test_parallel_examples.py  test_parse_converse.py  test_reports.py  test_research_examples.py  test_roles.py  test_trace.py  test_trace_io.py  test_trivy_cli.py  test_turn.py  test_ui.py  test_ui_service.py  test_verdict.py
utils/: config.py  enums.py  log.py
(+67 files in other folders)
