[project]
name = "orchflow"
version = "0.1.0"
description = "Composable quality gates for Bedrock scripts — call, eval, retry."
readme = "README.md"
authors = [
    { name = "RyanHenry", email = "ryandhenry.12@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "tqdm>=4.68.3",
]

[project.scripts]
orchflow = "orchflow:main"

[project.optional-dependencies]
aws = [
    "boto3>=1.43.39",
    "boto3-stubs[bedrock,bedrock-runtime]>=1.43.39",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py313"]
